Add apple pie recipe page

--- a/recipes/apple-cake.html
+++ b/recipes/apple-cake.html
@@ -1,11 +1,29 @@
 <DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="utf-8">
-            <meta lang="en">
-            <title>Recipes</title>
-        </head>
-        <body>
-            <h1>Apple Cake</h1>
-        </body>
-    </html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta lang="en">
+    <title>Recipes</title>
+  </head>
+
+  <body>
+    <h1>Apple Cake</h1>
+    <img src="https://www.allrecipes.com/thmb/4jJuqAEtdH2UnMPrTzKt2Nd4s1Y=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/on21-thanksgiving-playbook-chai-apple-pie-photo-by-carson-downing-sq-crop-538308014979491db3ebed8225d8b09f.jpg" alt="Apple Pie">
+    <h3>Homemade apple pie is always a good idea — and if you're looking for the best apple pie recipe of all time, you've come to the right place. Grandma Ople's recipe is one of our most popular recipes ever. Try it today to learn what all the hype is about!</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quaerat ad accusamus similique quia, hic laborum nemo nulla velit. Distinctio quo minima ratione praesentium fugiat pariatur sed sit quae cum!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam repellendus eaque quis eos, ex necessitatibus qui ipsa doloremque assumenda dolore repudiandae nihil doloribus, recusandae quo eum! Aliquam itaque cumque tenetur.</p>
+    <h4>Ingrediens:</h4>
+    <ul>
+      <li>8 small <strong>apples</strong></li>
+      <li><strong>butter and all-purpose flour</strong> cooked into a paste</li>
+      <li>blend of white and brown <strong>sugar</strong></li>
+      <li><strong>pie crust</strong></li>
+    </ul>
+    <h4>Steps:</h4>
+    <ol>
+      <li><strong>Make the filling:</strong> On the stove, make a paste with flour and butter. Add the sugar and water and bring to a boil. Simmer, then remove from heat.</li>
+      <li><strong>Assemble the pie:</strong> Press one crust into a pie plate. Place the sliced apples on the bottom crust. Use the top crust to make a lattice crust according to the recipe below. Pour the butter-sugar mixture over the lattice crust.</li>
+      <li><strong>Bake de pie:</strong>  Bake the pie in a preheated oven until the apples are soft and the crust is golden brown.</li>
+    </ol>
+  </body>
+</html>
