Add banana bread recepe page

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -1,11 +1,36 @@
 <DOCTYPE html>
-    <html>
-        <head>
-            <meta charset="utf-8">
-            <meta lang="en">
-            <title>Recipes</title>
-        </head>
-        <body>
-            <h1>Banana Bread</h1>
-        </body>
-    </html>
+<html>
+
+  <head>
+    <meta charset="utf-8">
+    <meta lang="en">
+    <title>Recipes</title>
+  </head>
+
+  <body>
+    <h1>Banana Bread</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOu_xVat2Zlzi9UsucW8VxS4u-IeAtIZENkw&usqp=CAU" alt="Banana Bread">
+    <h3>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor. Why compromise the banana flavor? Friends and family love my recipe and say it's by far the best! It tastes wonderful toasted. Enjoy!</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quaerat ad accusamus similique quia, hic laborum
+        nemo nulla velit. Distinctio quo minima ratione praesentium fugiat pariatur sed sit quae cum!</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam repellendus eaque quis eos, ex necessitatibus
+        qui ipsa doloremque assumenda dolore repudiandae nihil doloribus, recusandae quo eum! Aliquam itaque cumque
+        tenetur.</p>
+      <h4>Ingrediens:</h4>
+      <ul>
+        <li><strong>flour</strong></li>
+        <li><strong>baking soda</strong> cooked into a paste</li>
+        <li>a pinch of <strong>salt</strong></li>
+        <li>a stick of <strong>buttor</strong></li>
+        <li>brown <strong>sugar</strong></li>
+        <li>overripe <strong>bananas</strong></li>
+      </ul>
+      <h4>Steps:</h4>
+      <ol>
+        <li>Combine the dry ingredients in one bowl.</li>
+        <li>Beat the butter and sugar in another bowl. Add the eggs and mashed bananas.</li>
+        <li> Add the wet mixture to the dry mixture.</li>
+        <li> Pour the batter into a loaf pan and bake in a preheated oven.</li>
+      </ol>
+  </body>
+</html>
