Add styling to the website

--- a/recipes/apple-cake.html
+++ b/recipes/apple-cake.html
@@ -1,12 +1,13 @@
 <DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta lang="en">
-    <title>Recipes</title>
-  </head>
-
-  <body>
+    <head>
+      <link rel="stylesheet" href="../style.css">
+      <meta charset="utf-8">
+      <meta lang="en">
+      <title>Recipes</title>
+    </head>
+  
+    <body id="one">
     <h1>Apple Cake</h1>
     <img src="https://www.allrecipes.com/thmb/4jJuqAEtdH2UnMPrTzKt2Nd4s1Y=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/on21-thanksgiving-playbook-chai-apple-pie-photo-by-carson-downing-sq-crop-538308014979491db3ebed8225d8b09f.jpg" alt="Apple Pie">
     <h3>Homemade apple pie is always a good idea — and if you're looking for the best apple pie recipe of all time, you've come to the right place. Grandma Ople's recipe is one of our most popular recipes ever. Try it today to learn what all the hype is about!</h3>
