--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -1,13 +1,14 @@
 <DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta lang="en">
-    <title>Recipes</title>
-  </head>
+<head>
+  <link rel="stylesheet" href="../style.css">
+  <meta charset="utf-8">
+  <meta lang="en">
+  <title>Recipes</title>
+</head>
 
-  <body>
+<body id="two">
     <h1>Banana Bread</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOu_xVat2Zlzi9UsucW8VxS4u-IeAtIZENkw&usqp=CAU" alt="Banana Bread">
     <h3>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor. Why compromise the banana flavor? Friends and family love my recipe and say it's by far the best! It tastes wonderful toasted. Enjoy!</h3>
